# aegis-command

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  compose.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260715_0001_assessments.py  20260716_0002_operational_controls.py  20260716_0003_soc_console.py
apps/api/src/aegis_command/: __init__.py  core.py  main.py
apps/api/src/aegis_command/analytics/: __init__.py  baseline.py  features.py  risk.py  runtime.py  synthetic.py
apps/api/src/aegis_command/api/: dependencies.py  middleware.py  router.py
apps/api/src/aegis_command/application/: ports.py  services.py  soc.py
apps/api/src/aegis_command/domain/: __init__.py
apps/api/src/aegis_command/infrastructure/: __init__.py  database.py  enforcement.py  observability.py
apps/api/src/aegis_command/security/: auth.py  pqc.py
apps/api/src/finspark/: __init__.py  core.py  main.py
apps/api/src/finspark/analytics/: baseline.py  features.py  model.py  risk.py  runtime.py  synthetic.py
apps/api/src/finspark/api/: dependencies.py  router.py
apps/api/src/finspark/application/: ports.py  services.py  soc.py
apps/api/src/finspark/domain/: models.py
apps/api/src/finspark/infrastructure/: database.py  enforcement.py  observability.py
apps/api/src/finspark/security/: __init__.py  auth.py  pqc.py
apps/api/tests/integration/: test_api.py
apps/api/tests/unit/: test_analytics.py  test_application.py  test_core.py  test_enforcement.py
docs/: architecture.md  (+4 more)
(+45 files in other folders)
