[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "finspark-sentinel-api"
version = "0.1.0"
description = "Explainable privileged-access risk and post-quantum security API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "aiosqlite>=0.21,<1",
  "asyncpg>=0.30,<1",
  "cryptography>=45,<47",
  "fastapi[standard]>=0.116,<1",
  "numpy>=2.2,<3",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "scikit-learn>=1.7,<2",
  "sqlalchemy[asyncio]>=2.0.41,<2.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finspark"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["finspark"]
